--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -13,8 +13,8 @@
           {% endif %}
 			<div class="w3_login_module">
 				<div class="module form-module">
-				  <div class="toggle"><i class="fa fa-times fa-pencil"></i>
-					<div class="tooltip">Click aqui</div>
+				  <div>
+					
 				  </div>
 				  <div class="form">
           				<h3 class="mb-4">Ingresar</h3>
@@ -24,15 +24,6 @@
 					  <input type="password" name="password" required
               			id="id_password" class="form-control" placeholder="Contraseña"/>
 					  <input type="submit" class="btn btn-primary btn-block" value="Acceder">
-					</form>
-				  </div>
-				  <div class="form">
-					<h2>Crear cuenta</h2>
-					<form action="#" method="post">
-					  {{form.name}}
-					  <input type="password" name="Password" placeholder="Password" required=" ">
-					  <input type="email" name="Email" placeholder="Email Address" required=" ">
-					  <input type="submit" value="Register">
 					</form>
 				  </div>
 				  <div class="cta"><a href="{% url 'password_reset' %}">¿Ha olvidado su clave?</a></div>
