--- a/registration/templates/registration/signup.html
+++ b/registration/templates/registration/signup.html
@@ -14,7 +14,7 @@
           <p style="color:green;">Usuario registrado correctamente, ya puedes identificarte.</p>
         {% endif %}
         <form action="" method="post">{% csrf_token %}
-          <h3 class="mb-4">Registro</h3>
+         <h3>Registrate</h3>
           {{form.as_p}}
           <p><input type="submit" class="btn btn-primary btn-block" value="Confirmar"></p>
         </form>
