--- a/services/templates/services/services.html
+++ b/services/templates/services/services.html
@@ -18,45 +18,12 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 					<ul class="nav navbar-nav nav_1">
-						<li><a href="products.html">Branded Foods</a></li>
-						<li><a href="household.html">Households</a></li>
-						<li class="dropdown mega-dropdown active">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Veggies & Fruits<span class="caret"></span></a>				
-							<div class="dropdown-menu mega-dropdown-menu w3ls_vegetables_menu">
-								<div class="w3ls_vegetables">
-									<ul>	
-										<li><a href="vegetables.html">Vegetables</a></li>
-										<li><a href="vegetables.html">Fruits</a></li>
-									</ul>
-								</div>                  
-							</div>				
-						</li>
-						<li><a href="kitchen.html">Kitchen</a></li>
-						<li><a href="short-codes.html">Short Codes</a></li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Beverages<span class="caret"></span></a>
-							<div class="dropdown-menu mega-dropdown-menu w3ls_vegetables_menu">
-								<div class="w3ls_vegetables">
-									<ul>
-										<li><a href="drinks.html">Soft Drinks</a></li>
-										<li><a href="drinks.html">Juices</a></li>
-									</ul>
-								</div>                  
-							</div>	
-						</li>
-						<li><a href="pet.html">Pet Food</a></li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Frozen Foods<span class="caret"></span></a>
-							<div class="dropdown-menu mega-dropdown-menu w3ls_vegetables_menu">
-								<div class="w3ls_vegetables">
-									<ul>
-										<li><a href="frozen.html">Frozen Snacks</a></li>
-										<li><a href="frozen.html">Frozen Nonveg</a></li>
-									</ul>
-								</div>                  
-							</div>	
-						</li>
-						<li><a href="bread.html">Bread & Bakery</a></li>
+						<li><a href="{% url 'products' %}">Productos</a></li>
+						{% for product in products %}
+						{% for category in product.categorias.all %}
+						<li><a href="{% url 'category' category.id %}">{{category.name}}</a></li>
+						{% endfor %}
+						{% endfor %}
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</nav>
@@ -86,76 +53,6 @@
 		<div class="clearfix"></div>
 	</div>
 <!-- //banner -->
-<!-- services-bottom -->
-	<div class="services-bottom">
-		<div class="container">
-			<div class="col-md-3 about_counter_left">
-				<i class="glyphicon glyphicon-user" aria-hidden="true"></i>
-				<p class="counter">89,147</p> 
-				<h3>Followers</h3>
-			</div>
-			<div class="col-md-3 about_counter_left">
-				<i class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></i>
-				<p class="counter">54,598</p> 
-				<h3>Savings</h3>
-			</div>
-			<div class="col-md-3 about_counter_left">
-				<i class="glyphicon glyphicon-export" aria-hidden="true"></i>
-				<p class="counter">83,983</p> 
-				<h3>Support</h3>
-			</div>
-			<div class="col-md-3 about_counter_left">
-				<i class="glyphicon glyphicon-bullhorn" aria-hidden="true"></i>
-				<p class="counter">45,894</p> 
-				<h3>Popularity</h3>
-			</div>
-			<div class="clearfix"> </div>
-			<!-- Stats-Number-Scroller-Animation-JavaScript -->
-				<script src="{% static 'core/js/waypoints.min.js' %}"></script> 
-				<script src="{% static 'core/js/counterup.min.js' %}"></script> 
-				<script>
-					jQuery(document).ready(function( $ ) {
-						$('.counter').counterUp({
-							delay: 10,
-							time: 1000
-						});
-					});
-				</script>
-			<!-- //Stats-Number-Scroller-Animation-JavaScript -->
-
-		</div>
-	</div>
-<!-- //services-bottom -->
-<!-- newsletter-top-serv-btm -->
-	<div class="newsletter-top-serv-btm">
-		<div class="container">
-			<div class="col-md-4 wthree_news_top_serv_btm_grid">
-				<div class="wthree_news_top_serv_btm_grid_icon">
-					<i class="fa fa-shopping-cart" aria-hidden="true"></i>
-				</div>
-				<h3>Nam libero tempore</h3>
-				<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus 
-					saepe eveniet ut et voluptates repudiandae sint et.</p>
-			</div>
-			<div class="col-md-4 wthree_news_top_serv_btm_grid">
-				<div class="wthree_news_top_serv_btm_grid_icon">
-					<i class="fa fa-bar-chart" aria-hidden="true"></i>
-				</div>
-				<h3>officiis debitis aut rerum</h3>
-				<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus 
-					saepe eveniet ut et voluptates repudiandae sint et.</p>
-			</div>
-			<div class="col-md-4 wthree_news_top_serv_btm_grid">
-				<div class="wthree_news_top_serv_btm_grid_icon">
-					<i class="fa fa-truck" aria-hidden="true"></i>
-				</div>
-				<h3>eveniet ut et voluptates</h3>
-				<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus 
-					saepe eveniet ut et voluptates repudiandae sint et.</p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
 
 </body>
 
