--- a/products/templates/products/checkout.html
+++ b/products/templates/products/checkout.html
@@ -30,20 +30,20 @@
 		<div class="w3l_banner_nav_right">
 <!-- about -->
 		<div class="privacy about">
-			<h3>Chec<span>kout</span></h3>
+			<h3>Ped<span>idos</span></h3>
 			
 	      <div class="checkout-right">
-					<h4>Your shopping cart contains: <span>3 Products</span></h4>
+					<h4>Tu carrito contiene: <span>3 Productos</span></h4>
 				<table class="timetable_sub">
 					<thead>
 						<tr>
 							<th>SL No.</th>	
-							<th>Product</th>
-							<th>Quality</th>
-							<th>Product Name</th>
+							<th>Producto</th>
+							<th>Calidad</th>
+							<th>Nombre del producto</th>
 						
-							<th>Price</th>
-							<th>Remove</th>
+							<th>Precio</th>
+							<th>Eliminar</th>
 						</tr>
 					</thead>
 					<tbody><tr class="rem1">
@@ -58,7 +58,7 @@
 								</div>
 							</div>
 						</td>
-						<td class="invert">Fortune Sunflower Oil</td>
+						<td class="invert">Arroz</td>
 						
 						<td class="invert">$290.00</td>
 						<td class="invert">
@@ -80,7 +80,7 @@
 								</div>
 							</div>
 						</td>
-						<td class="invert">Basmati Rise (5 Kg)</td>
+						<td class="invert">Leche</td>
 					
 						<td class="invert">$250.00</td>
 						<td class="invert">
@@ -102,7 +102,7 @@
 								</div>
 							</div>
 						</td>
-						<td class="invert">Pepsi Soft Drink (2 Ltr)</td>
+						<td class="invert">Harina</td>
 						
 						<td class="invert">$15.00</td>
 						<td class="invert">
@@ -117,60 +117,60 @@
 			</div>
 			<div class="checkout-left">	
 				<div class="col-md-4 checkout-left-basket">
-					<h4>Continue to basket</h4>
+					<h4>Continuar comprando</h4>
 					<ul>
-						<li>Product1 <i>-</i> <span>$15.00 </span></li>
-						<li>Product2 <i>-</i> <span>$25.00 </span></li>
-						<li>Product3 <i>-</i> <span>$29.00 </span></li>
-						<li>Total Service Charges <i>-</i> <span>$15.00</span></li>
+						<li>Producto 1 <i>-</i> <span>$15.00 </span></li>
+						<li>Producto 2 <i>-</i> <span>$25.00 </span></li>
+						<li>Producto 3 <i>-</i> <span>$29.00 </span></li>
+						<li>Total de envio <i>-</i> <span>$15.00</span></li>
 						<li>Total <i>-</i> <span>$84.00</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8 address_form_agile">
-					  <h4>Add a new Details</h4>
+					  <h4>Agrega tu informacion</h4>
 				<form action="payment.html" method="post" class="creditly-card-form agileinfo_form"> 
 									<section class="creditly-wrapper wthree, w3_agileits_wrapper">
 										<div class="information-wrapper">
 											<div class="first-row form-group">
 												<div class="controls">
-													<label class="control-label">Full name: </label>
-													<input class="billing-address-name form-control" type="text" name="name" placeholder="Full name">
+													<label class="control-label">Nombre completo: </label>
+													<input class="billing-address-name form-control" type="text" name="name" placeholder="Nombre completo:">
 												</div>
 												<div class="w3_agileits_card_number_grids">
 													<div class="w3_agileits_card_number_grid_left">
 														<div class="controls">
-															<label class="control-label">Mobile number:</label>
-														    <input class="form-control" type="text" placeholder="Mobile number">
+															<label class="control-label">Numero:</label>
+														    <input class="form-control" type="text" placeholder="Numero:">
 														</div>
 													</div>
 													<div class="w3_agileits_card_number_grid_right">
 														<div class="controls">
-															<label class="control-label">Landmark: </label>
-														 <input class="form-control" type="text" placeholder="Landmark">
+															<label class="control-label">Referencia: </label>
+														 <input class="form-control" type="text" placeholder="Referencia:">
 														</div>
 													</div>
 													<div class="clear"> </div>
 												</div>
 												<div class="controls">
-													<label class="control-label">Town/City: </label>
-												 <input class="form-control" type="text" placeholder="Town/City">
+													<label class="control-label">Localidad/Cuidad: </label>
+												 <input class="form-control" type="text" placeholder="Localidad/Cuidad:">
 												</div>
 													<div class="controls">
-															<label class="control-label">Address type: </label>
+															<label class="control-label">Tipo de direccion: </label>
 												     <select class="form-control option-w3ls">
-																							<option>Office</option>
-																							<option>Home</option>
-																							<option>Commercial</option>
+																							<option>Oficina</option>
+																							<option>Casa</option>
+																							<option>Negocio</option>
 							
 																					</select>
 													</div>
 											</div>
-											<button class="submit check_out">Delivery to this Address</button>
+											<button class="submit check_out">Entregar a esta direccion</button>
 										</div>
 									</section>
 								</form>
 									<div class="checkout-right-basket">
-				        	<a href="{% url 'payment' %}">Make a Payment <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
+				        	<a href="{% url 'payment' %}">Hacer el pago <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
 			      	</div>
 					</div>
 			
